# ML-basics

./: BatchNorm_LayerNorm.ipynb  Evaluation_metrics1.ipynb  Evaluation_metrics2.ipynb  MLP_and_Dropout.ipynb  Optimizers.ipynb  Training_Loop.ipynb  activations_and_losses.ipynb  activations_and_losses2.ipynb  feature_engineering_pandas.ipynb  pyproject.toml  train_test_split_shuffling.ipynb
